# Gold_vs_Equities

./: .dockerignore  .env.example  .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  LICENSE  UPDATE_1971.md  UPGRADE_README.md  UPGRADE_SUMMARY.md  USER_GUIDE.md  docker-compose.yml  histprices.json  main.py  pyproject.toml  readme.md  requirements.txt  test.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Gold_vs_Equities/: .gitignore  README.md  config.yaml  gitpush.sh  main.py  pyproject.toml
Gold_vs_Equities/.github/: copilot-instructions.md
Gold_vs_Equities/src/: eda.py  fetch_gold.py  fetch_sp500.py  preprocess.py
Gold_vs_Equities/tests/: test_eda.py  test_preprocess.py
Gold_vs_Equities/utils/: load_config.py
data/: gold_sp500_aligned.csv
src/: eda.py  fetch_ticker.py  load_historical.py  preprocess.py  preprocess_1971.py
src/gold_vs_equities/: __init__.py  cli.py  config.py
src/gold_vs_equities/core/: __init__.py
src/gold_vs_equities/data/: __init__.py  fetch_ticker.py  preprocess.py
src/gold_vs_equities/utils/: __init__.py
src/gold_vs_equities/viz/: __init__.py
tests/: test_load_historical.py
utils/: copilot-instructions.md  setup.md  yfinance.md
web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: dashboard.tsx
web/components/ui/: button.tsx  calendar.tsx  popover.tsx  select.tsx  separator.tsx
web/src/types/: jstat.d.ts
