[project]
name = "gold-vs-equities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

